New C-side prototype.
The new SpiNNaker application expects a series of commands to be loaded which
control how packets are generated and what is recorded. This enormously
simplifies the task of configuring the program and will hopefully result in a
vastly simpler and more flexible Python side.

The Python side needs suitably re-architecting/writing.

--- a/spinnaker_source/Makefile
+++ b/spinnaker_source/Makefile
@@ -4,7 +4,7 @@ APP = network_tester
 APP_OUTPUT_DIR = ../network_tester/binaries/
 BUILD_DIR = build/
 
-OBJECTS = network_tester.o bernoulli.o
+OBJECTS = network_tester.o
 #LIBRARIES = -lspin1_api
 
 include $(SPINN_DIRS)/Makefile.common
