--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ python:
         - 2.7
         - 3.4
 install:
-        - pip install -r requirements.txt
+        - python setup.py develop
         - pip install -r requirements-test.txt
         - pip install python-coveralls
-script: py.test network_tester --cov network_tester --durations=10
+script: py.test tests --cov tests --cov network_tester --durations=10
 after_success:
         - coveralls
 notifications:
