Don't check test coverage in travis.
Since not all tests can run (they require hardware), don't run the coverage
checker on the tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
         - python setup.py develop
         - pip install -r requirements-test.txt
         - pip install python-coveralls
-script: py.test tests --cov tests --cov network_tester --durations=10
+script: py.test tests --cov network_tester --durations=10
 after_success:
         - coveralls
 notifications:
