--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ install:
         - python setup.py develop
         - pip install -r requirements-test.txt
         - pip install python-coveralls
-script: py.test tests --cov network_tester --durations=10
+        - pip install flake8
+script:
+        - py.test tests --cov network_tester --durations=10
+        - flake8 network_tester tests
 after_success:
         - coveralls
 notifications:
