Fix Tox and README.

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 
 [testenv:pep8]
 deps = flake8
-commands = flake8 rig tests
+commands = flake8 network_tester tests
 
 [flake8]
 exclude = */__init__.py
